1.1.0
=====

* fixed ecnryption error in case key is not trusted
* added aboud dialog to editor